# CRUD-Django

./: .env  .env_example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  decorators.py  forms.py  models.py  urls.py  utlis.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_image.py
category/: admin.py  forms.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py
product/: admin.py  forms.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: activate-failed.html  activate.html  changepass.html  login.html  password_reset.html  password_reset_done.html  password_reset_form.html  password_reset_sent.html  profile.html  register.html
templates/accounts/manage/: accounts.html  add.html  update.html
templates/accounts/password/: changepass.html
templates/category/: categoryadd.html  categoryread.html  categoryupdate.html
templates/product/: productadd.html  productread.html  productupdate.html
templates/user/: userread.html  userupdate.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
userCRUD/: asgi.py  settings.py  urls.py  wsgi.py
