[tool.poetry]
name = "usercrud"
version = "0.1.0"
description = ""
authors = ["Anupam1223 <anupam.siwakoti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-crispy-forms = "^1.12.0"
isort = "^5.9.1"
sentry-sdk = "^1.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.902"
bandit = "^1.7.0"
django-sass-processor = "^1.0.1"
Pillow = "^8.2.0"
python-decouple = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
